# salary_calc

./: CMakeLists.txt  Font.qml  Main.qml  MainWindow.cpp  MainWindow.h  PRIVACY POLICY  PRIVACY POLICY.MD  PRIVACY POLICY.md  Popup.cpp  README.md  main.cpp  resources.qrc
Android/: AndroidManifest.xml  splashscreen.xml
Android/res/values/: splashscreentheme.xml
DesignEffects/: qmldir
extra/: AndroidManifest.xml  splashscreen.xml  style.xml
font/: CustomFonts.qml  qmldir
images/: intro.cdr
